--- a/styles/about.tablet.css
+++ b/styles/about.tablet.css
@@ -5,3 +5,16 @@
 .bookimages img {
     flex-basis: 20%;
 }
+
+header {
+    margin-bottom: 0;
+}
+
+#interests section {
+    flex: 0 1 34%;
+}
+
+#interests > :nth-child(1),
+#interests > :nth-child(2) {
+    flex-basis: 34%;
+}
